(layout) Prevent double scrollbar on package files
Currently, if you expand a file in the files list on a package, there
will be two vertical scrollbars instead of the intended one. The css
change in this commit fixes this, and now only one vertical and one
horizontal scrollbar is present.

--- a/chocolatey/Website/Content/packages.css
+++ b/chocolatey/Website/Content/packages.css
@@ -42,8 +42,11 @@ textarea {
     display: none;
 }
 #files pre {
-    max-height: 500px;
     overflow: auto;
+}
+#files pre[class*="language-"].line-numbers.line-numbers code {
+    overflow: visible;
+    max-height: 500px;
 }
 /*Package Sidebar*/
 #package-sidebar .package-logo {
